2010-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (has_modifier): MOve up in file to use in
	__get_lcid_from_locale as well.
	(__get_lcid_from_locale): Handle no_NO locale as alias for nn_NO.
	Default all sr_XY locales to Cyrillic script.  Change lcid to Latin
	script if "@latin" modifier has been specified.
	(__set_charset_from_locale): Handle Serbian in codepage 1251 case as
	well.  Also check for sr_BA lcid.  Restrict "@euro" modifier to
	locales otherwise defaulting to ISO-8859-1.

2010-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (__set_charset_from_locale): Set default charset for
	"ka_GE" locale to GEORGIAN-PS, for "kk_KZ" to PT154.

2010-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check_nfs_symlink): Reopen file with
	FILE_READ_EA access since, surprisingly, you need it to read EAs even
	on NFS.

2010-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (get_full_privileged_inheritable_token): New function
	to fetch token with full privileges from logon token in Vista and
	later, and to make token inheritable.  Add lengthy comments to explain
	the function's job.
	(cygwin_logon_user): Drop calling SetHandleInformation.  Enable TCB
	privilege and call get_full_privileged_inheritable_token.
	(lsaauth): Don't fetch linked token and don't make handle inheritable
	here, just call get_full_privileged_inheritable_token instead.
	(lsaprivkeyauth): Ditto.

2010-02-05  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (__set_charset_from_locale): Set default charset for
	"uz_UZ" locale to ISO-8859-1, with the "@cyrillic" modifier to UTF-8.

2010-02-05  Christopher Faylor  <me+cygwin@cgf.cx>

	* dll_init.cc (per_module::run_dtors): Use consistent method for
	running destructors.

2010-02-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* regcomp.c (p_ere): Workaround incorrect compiler warning.
	* regerror.c (regatoi): Return non-const string or compiler complains